[crkbd.koyo](ext): tab dance for a,s,d,f

--- a/assets/kd_layout.yaml
+++ b/assets/kd_layout.yaml
@@ -31,49 +31,14 @@ layers:
   - {t: ',', h: RCTL}
   - {t: ., h: LALT}
   - {t: /, h: RGUI}
-  - {h: L3}
-  - {t: ESC, h: L2}
-  - {t: SPC, h: L1}
-  - {t: BSPC, h: L5}
-  - {t: ENT, h: L2}
-  - {h: L4}
-  L1:
-  - Gui+ Q
-  - Gui+ W
-  - Gui+ E
-  - Gui+ R
-  - Gui+ T
-  - ''
-  - Alt+Gui+ I
-  - Gui+ `
-  - Gui+ TAB
-  - ''
-  - LGUI
-  - LALT
-  - LCTL
-  - LSFT
-  - ''
-  - LEFT
-  - DOWN
-  - UP
-  - RGHT
-  - ''
-  - Gui+ Z
-  - Gui+ X
-  - Gui+ C
-  - Gui+ V
-  - Gui+ B
-  - ''
-  - ''
-  - Sft+ TAB
-  - TAB
-  - ''
-  - ''
-  - ''
-  - {t: L0, h: toggle, type: held}
-  - DEL
-  - ''
-  - ''
+  - LT(LY NUM, NO)
+  - LT(LY SYM, ESC)
+  - LT(LY EXT, SPC)
+  - LT(LY MED, BSPC)
+  - LT(LY SYM, ENT)
+  - LT(LY FUN, NO)
+  L1: [Gui+ Q, Gui+ W, Gui+ E, Gui+ R, Gui+ T, '', Alt+Gui+ I, Gui+ `, Gui+ TAB, '', TD(TD EXT GUI A), TD(TD EXT GUI S), TD(TD EXT GUI D), TD(TD EXT GUI F), Gui+
+      G, LEFT, DOWN, UP, RGHT, '', Gui+ Z, Gui+ X, Gui+ C, Gui+ V, Gui+ B, '', '', Sft+ TAB, TAB, '', '', '', TO(LY BAS), DEL, '', '']
   L2:
   - ^
   - +
@@ -106,10 +71,10 @@ layers:
   - )
   - /
   - {t: ▽, type: trans}
-  - {t: L0, h: toggle, type: held}
+  - TO(LY BAS)
   - {t: ▽, type: trans}
   - {t: ▽, type: trans}
-  - {t: L0, h: toggle}
+  - TO(LY BAS)
   - {t: ▽, type: trans}
   L3:
   - ''
@@ -142,83 +107,12 @@ layers:
   - P2
   - P3
   - PSLS
-  - {type: held}
+  - {t: ▽, type: trans}
   - {t: ▽, type: trans}
   - {t: ▽, type: trans}
   - {t: ▽, type: trans}
   - P0
   - {t: ▽, type: trans}
-  L4:
-  - ''
-  - F7
-  - F8
-  - F9
-  - F12
-  - ''
-  - ''
-  - ''
-  - ''
-  - ''
-  - ''
-  - F4
-  - F5
-  - F6
-  - F11
-  - ''
-  - RSFT
-  - RCTL
-  - LALT
-  - RGUI
-  - ''
-  - F1
-  - F2
-  - F3
-  - F10
-  - ''
-  - ''
-  - ''
-  - ''
-  - ''
-  - ''
-  - ''
-  - ''
-  - ''
-  - ''
-  - {type: held}
-  L5:
-  - ''
-  - VOLD
-  - MUTE
-  - VOLU
-  - ''
-  - ''
-  - RGB HUD
-  - RGB TOG
-  - RGB HUI
-  - ''
-  - ''
-  - MPRV
-  - MPLY
-  - MNXT
-  - Meh+ K
-  - ''
-  - Gui+ -
-  - Gui+ 0
-  - Gui+ =
-  - ''
-  - ''
-  - ''
-  - ''
-  - ''
-  - ''
-  - ''
-  - DT DOWN
-  - DT PRNT
-  - DT UP
-  - ''
-  - ''
-  - ''
-  - ''
-  - {type: held}
-  - ''
-  - ''
+  L4: ['', F7, F8, F9, F12, '', '', '', '', '', '', F4, F5, F6, F11, '', RSFT, RCTL, LALT, RGUI, '', F1, F2, F3, F10, '', '', '', '', '', '', '', '', '', '', '']
+  L5: ['', VOLD, MUTE, VOLU, '', '', RGB HUD, RGB TOG, RGB HUI, '', '', MPRV, MPLY, MNXT, Meh+ K, '', Gui+ -, Gui+ 0, Gui+ =, '', '', '', '', '', '', '', DT DOWN,
+    DT PRNT, DT UP, '', '', '', '', '', '', '']
