feat(koyo): add help module and oryx command for moonlander
- refactor(help): extract help functionality into dedicated module
- feat(config): add `oryx_url` configuration for moonlander layout
- feat(moonlander): implement `oryx` command to open layout in browser
- chore: remove deprecated oryx documentation

--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,7 @@
 paths:
   qmk_dir: "$HOME/repos/nikbrunner/qmk_firmware"
   repo_dir: "$HOME/repos/nikbrunner/koyo"
+  oryx_url: "https://configure.zsa.io/moonlander/layouts/EM5en/latest/0"
   script_files:
     - koyo
     - qmk/moonlander/flash.sh
