--- a/assets/kd_config.yaml
+++ b/assets/kd_config.yaml
@@ -1,40 +1,29 @@
 draw_config:
+  font_size: 14
+
   key_w: 90.0
   key_h: 90.0
+
   split_gap: 30.0
+
   combo_w: 28.0
   combo_h: 26.0
+
   key_rx: 6.0
   key_ry: 6.0
   dark_mode: true
-  n_columns: 1
-  separate_combo_diagrams: false
-  combo_diagrams_scale: 2
-  inner_pad_w: 2.0
-  inner_pad_h: 2.0
-  outer_pad_w: 30.0
-  outer_pad_h: 56.0
-  line_spacing: 1.2
-  arc_radius: 6.0
-  append_colon_to_layer_header: true
-  small_pad: 2.0
-  legend_rel_x: 0.0
-  legend_rel_y: 0.0
-  draw_key_sides: false
-  key_side_pars:
-    rel_x: 0
-    rel_y: 4
-    rel_w: 12
-    rel_h: 12
-    rx: 4
-    ry: 4
-  svg_extra_style: ""
-  footer_text: ""
-  shrink_wide_legends: 7
-  glyph_tap_size: 11
-  glyph_hold_size: 11
+
+  glyph_tap_size: 14
+  glyph_hold_size: 12
   glyph_shifted_size: 10
-  glyphs: {}
+
+  legend_rel_x: 0
+  legend_rel_y: 0
+
+  bind_width: 2
+  bind_stroke_width: 2
+
+  connection_stroke_width: 2
 parse_config:
   preprocess: true
   skip_binding_parsing: false
@@ -64,7 +53,6 @@ parse_config:
     - KC_
   qmk_keycode_map:
     XXXXXXX: ""
-    "SS TILD SLSH": "~/"
     "NO": ""
     MINUS: "-"
     MINS: "-"
