--- a/assets/kd_layout.yaml
+++ b/assets/kd_layout.yaml
@@ -1,241 +1,249 @@
 layout: { qmk_keyboard: crkbd/rev1, qmk_layout: LAYOUT_split_3x5_3 }
 layers:
-  LY_BAS: # Base Layer
-    - Q
-    - W
-    - E
-    - R
-    - T
-    - Y
-    - U
-    - I
-    - O
-    - P
-    - A
-    - S
-    - { t: D, h: LY_SYM }
-    - F
-    - G
-    - H
-    - J
-    - { t: K, h: LY_SYM }
-    - L
-    - ;
-    - { t: Z, h: LGUI }
-    - { t: X, h: LALT }
-    - { t: C, h: LCTL }
-    - { t: V, h: LSFT }
-    - B
-    - N
-    - { t: M, h: RSFT }
-    - { t: ",", h: RCTL }
-    - { t: ., h: LALT }
-    - { t: /, h: RGUI }
-    - { t: "", h: LY_FUN }
-    - { t: ESC, h: LY_NUM }
-    - { t: SPC, h: LY_EXT }
-    - { t: ENT, h: HYPR }
-    - { t: TAB, h: MEH }
-    - { t: "", h: LY_MED }
+    LY_BAS: # Base Layer
+        - Q
+        - W
+        - E
+        - R
+        - T
+        - Y
+        - U
+        - I
+        - O
+        - P
+        - A
+        - S
+        - { t: D, h: LY_SYM }
+        - F
+        - G
+        - H
+        - J
+        - { t: K, h: LY_SYM }
+        - L
+        - ;
+        - { t: Z, h: LGUI }
+        - { t: X, h: LALT }
+        - { t: C, h: LCTL }
+        - { t: V, h: LSFT }
+        - B
+        - N
+        - { t: M, h: RSFT }
+        - { t: ",", h: RCTL }
+        - { t: ., h: LALT }
+        - { t: /, h: RGUI }
 
-  LY_EXT: # Extended Layer
-    - { t: G(Q) }
-    - { t: G(W) }
-    - { t: G(E) }
-    - { t: G(R) }
-    - { t: G(T) }
-    - { t: G(C(C)) }
-    - { t: G(S(C)) }
-    - { t: G(`) }
-    - { t: G(TAB) }
-    - ""
-    - { t: "G(A)", h: "GUI" }
-    - { t: "G(S)", h: "ALT" }
-    - { t: "G(D)", h: "CTL" }
-    - { t: "G(F)", h: "SFT" }
-    - { t: G(G) }
-    - LEFT
-    - DOWN
-    - UP
-    - RIGHT
-    - ""
-    - { t: G(Z) }
-    - { t: G(X) }
-    - { t: G(C) }
-    - { t: G(V) }
-    - { t: G(B) }
-    - ""
-    - CW_TOGG
-    - { t: "G(LBRC)" } # Instead of G([)
-    - { t: "G(RBRC)" } # Instead of G(])
-    - { t: "AG(I)" }
-    - ""
-    - ""
-    - ""
-    - ""
-    - ""
-    - ""
+        # Left Thumb
+        - { t: "", h: LY_FUN }
+        - { t: ESC, h: LY_NUM }
+        - { t: SPC, h: LY_EXT }
 
-  LY_SYM: # Symbol Layer
-    - ^
-    - +
-    - "#"
-    - "%"
-    - $
-    - <
-    - "{"
-    - '"'
-    - "}"
-    - ">"
-    - "!"
-    - "-"
-    - "&"
-    - "?"
-    - "|"
-    - "="
-    - "["
-    - "'"
-    - "]"
-    - ":"
-    - "~"
-    - _
-    - "*"
-    - "@"
-    - "~/"
-    - \
-    - (
-    - "`"
-    - )
-    - /
-    - { t: "", h: LALT }
-    - { t: "", h: LCTL }
-    - { t: "", h: LGUI }
-    - ""
-    - "=>"
-    - ""
+        # Right Thumb
+        - { t: TAB, h: HYPR }
+        - { t: ENT, h: MEH }
+        - { t: "", h: LY_MED }
 
-  LY_NUM: # Number Layer
-    - ""
-    - ""
-    - ""
-    - ""
-    - ""
-    - +
-    - 7
-    - 8
-    - 9
-    - "*"
-    - LGUI
-    - LALT
-    - LCTL
-    - LSFT
-    - ""
-    - "="
-    - 4
-    - 5
-    - 6
-    - ":"
-    - HYPR
-    - MEH
-    - ""
-    - ""
-    - ""
-    - "-"
-    - 1
-    - 2
-    - 3
-    - /
-    - ""
-    - ""
-    - ""
-    - "."
-    - "0"
-    - ","
+    LY_EXT: # Extended Layer
+        - { t: G(Q) }
+        - { t: G(W) }
+        - { t: G(E) }
+        - { t: G(R) }
+        - { t: G(T) }
+        - { t: G(C(C)) }
+        - { t: G(S(C)) }
+        - { t: G(`) }
+        - { t: G(TAB) }
+        - ""
+        - { t: "G(A)", h: "GUI" }
+        - { t: "G(S)", h: "ALT" }
+        - { t: "G(D)", h: "CTL" }
+        - { t: "G(F)", h: "SFT" }
+        - { t: G(G) }
+        - LEFT
+        - DOWN
+        - UP
+        - RIGHT
+        - ""
+        - { t: G(Z) }
+        - { t: G(X) }
+        - { t: G(C) }
+        - { t: G(V) }
+        - { t: G(B) }
+        - ""
+        - CW_TOGG
+        - ""
+        - ""
+        - ""
 
-  LY_FUN: # Function Layer
-    - ""
-    - ""
-    - ""
-    - ""
-    - ""
-    - ""
-    - F9
-    - F10
-    - F11
-    - F12
-    - LGUI
-    - LALT
-    - LCTL
-    - LSFT
-    - ""
-    - ""
-    - F5
-    - F6
-    - F7
-    - F8
-    - HYPR
-    - MEH
-    - ""
-    - ""
-    - ""
-    - ""
-    - F1
-    - F2
-    - F3
-    - F4
-    - ""
-    - ""
-    - ""
-    - ""
-    - ""
-    - ""
+        # Left Thumb
+        - ""
+        - ""
+        - ""
 
-  LY_MED: # Media Layer
-    - { t: G(C(Q)) }
-    - VOLD
-    - MUTE
-    - VOLU
-    - ""
-    - ""
-    - RGB_HUD
-    - RGB_TOG
-    - RGB_HUI
-    - ""
-    - ""
-    - MPRV
-    - MPLY
-    - MNXT
-    - ""
-    - ""
-    - { t: G(-) }
-    - { t: G(0) }
-    - { t: G(=) }
-    - ""
-    - ""
-    - ""
-    - ""
-    - ""
-    - ""
-    - ""
-    - DT_DOWN
-    - DT_PRNT
-    - DT_UP
-    - ""
-    - ""
-    - ""
-    - ""
-    - ""
-    - ""
-    - ""
+        # Right Thumb
+        - { t: S(KC_TAB) }
+        - ""
+        - ""
+
+    LY_SYM: # Symbol Layer
+        - ^
+        - +
+        - "#"
+        - "%"
+        - $
+        - <
+        - "{"
+        - '"'
+        - "}"
+        - ">"
+        - "!"
+        - "-"
+        - "&"
+        - "?"
+        - "|"
+        - "="
+        - "["
+        - "'"
+        - "]"
+        - ":"
+        - "~"
+        - _
+        - "*"
+        - "@"
+        - "~/"
+        - \
+        - (
+        - "`"
+        - )
+        - /
+        - { t: "", h: LALT }
+        - { t: "", h: LCTL }
+        - { t: "", h: LGUI }
+        - ""
+        - "=>"
+        - ""
+
+    LY_NUM: # Number Layer
+        - ""
+        - ""
+        - ""
+        - ""
+        - ""
+        - +
+        - 7
+        - 8
+        - 9
+        - "*"
+        - LGUI
+        - LALT
+        - LCTL
+        - LSFT
+        - ""
+        - "="
+        - 4
+        - 5
+        - 6
+        - ":"
+        - HYPR
+        - MEH
+        - ""
+        - ""
+        - ""
+        - "-"
+        - 1
+        - 2
+        - 3
+        - /
+        - ""
+        - ""
+        - ""
+        - "."
+        - "0"
+        - ","
+
+    LY_FUN: # Function Layer
+        - ""
+        - ""
+        - ""
+        - ""
+        - ""
+        - ""
+        - F9
+        - F10
+        - F11
+        - F12
+        - LGUI
+        - LALT
+        - LCTL
+        - LSFT
+        - ""
+        - ""
+        - F5
+        - F6
+        - F7
+        - F8
+        - HYPR
+        - MEH
+        - ""
+        - ""
+        - ""
+        - ""
+        - F1
+        - F2
+        - F3
+        - F4
+        - ""
+        - ""
+        - ""
+        - ""
+        - ""
+        - ""
+
+    LY_MED: # Media Layer
+        - { t: G(C(Q)) }
+        - VOLD
+        - MUTE
+        - VOLU
+        - ""
+        - ""
+        - RGB_HUD
+        - RGB_TOG
+        - RGB_HUI
+        - ""
+        - ""
+        - MPRV
+        - MPLY
+        - MNXT
+        - ""
+        - ""
+        - { t: G(-) }
+        - { t: G(0) }
+        - { t: G(=) }
+        - ""
+        - ""
+        - ""
+        - ""
+        - ""
+        - ""
+        - ""
+        - DT_DOWN
+        - DT_PRNT
+        - DT_UP
+        - ""
+        - ""
+        - ""
+        - ""
+        - ""
+        - ""
+        - ""
 
 combos:
-  # Base layer combos
-  - { p: [7, 8], k: BSPC, l: [LY_BAS] } # I + O = Backspace
-  - { p: [16, 17], k: "[", l: [LY_BAS] } # J + K = Left bracket
-  - { p: [17, 18], k: "]", l: [LY_BAS] } # K + L = Right bracket
+    # Base layer combos
+    - { p: [7, 8], k: BSPC, l: [LY_BAS] } # I + O = Backspace
+    - { p: [16, 17], k: "[", l: [LY_BAS] } # J + K = Left bracket
+    - { p: [17, 18], k: "]", l: [LY_BAS] } # K + L = Right bracket
 
-  # Symbol layer combos
-  - { p: [7, 8], k: BSPC, l: [LY_SYM] } # 8 + 9 = Backspace
+    # Symbol layer combos
+    - { p: [7, 8], k: BSPC, l: [LY_SYM] } # 8 + 9 = Backspace
 
-  # Number layer combos
-  - { p: [7, 8], k: BSPC, l: [LY_NUM] } # 8 + 9 = Backspace
+    # Number layer combos
+    - { p: [7, 8], k: BSPC, l: [LY_NUM] } # 8 + 9 = Backspace
