feat(keymap): swap tab and enter keys in thumb clusters
- refactor(keymap): switch `HYPR_T(tab)` with `HYPR_T(ent)` and `MEH_T(ent)` with `MEH_T(tab)`
- refactor(layout): update thumb cluster visualization in layout files
- fix(ext): move `LSFT(tab)` to match new thumb cluster layout

--- a/assets/kd_layout.yaml
+++ b/assets/kd_layout.yaml
@@ -38,8 +38,8 @@ layers:
         - { t: SPC, h: LY_EXT }
 
         # Right Thumb
-        - { t: TAB, h: HYPR }
-        - { t: ENT, h: MEH }
+        - { t: ENT, h: HYPR }
+        - { t: TAB, h: MEH }
         - { t: "", h: LY_MED }
 
     LY_EXT: # Extended Layer
