feat(keymap): add screen brightness controls to media layer
- Add KC_BRID (X key) and KC_BRIU (V key) to media layer
- Mirrors volume control layout: X/V for brightness, W/R for volume
- Update both CRKBD and Moonlander keymaps
- Update layout documentation and regenerate SVG

--- a/assets/kd_layout.yaml
+++ b/assets/kd_layout.yaml
@@ -182,9 +182,9 @@ layers:
         - { t: G(=) }
         - ""
         - ""
+        - BRID
         - ""
-        - ""
-        - ""
+        - BRIU
         - ""
         - ""
         - DT_DOWN
