--- a/config.yml
+++ b/config.yml
@@ -6,6 +6,8 @@ paths:
     - koyo
     - qmk/moonlander/flash.sh
     - qmk/crkbd/flash.sh
+    - qmk/voyager/flash.sh
   keymap_dirs:
     moonlander: keyboards/zsa/moonlander/keymaps/koyo
     crkbd: keyboards/crkbd/rev1/keymaps/koyo
+    voyager: keyboards/zsa/voyager/keymaps/koyo
