--- a/config.yml
+++ b/config.yml
@@ -6,8 +6,10 @@ paths:
     - koyo
     - qmk/moonlander/flash.sh
     - qmk/crkbd/flash.sh
+    - qmk/chocofi/flash.sh
     - qmk/voyager/flash.sh
   keymap_dirs:
     moonlander: keyboards/zsa/moonlander/keymaps/koyo
     crkbd: keyboards/crkbd/rev1/keymaps/koyo
+    chocofi: keyboards/crkbd/rev1/keymaps/koyo_chocofi
     voyager: keyboards/zsa/voyager/keymaps/koyo
